# my-awesome-cpp-app

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  cmake.options  vcpkg.json
cmake/: Coverage.cmake  Doxygen.cmake  PreCommit.cmake
include/my_awesome_cpp_app/: example.h
src/: CMakeLists.txt  example.cpp  main.cpp
tests/: CMakeLists.txt  test_example.cpp
